src/test/deca/test_compilateur/context/invalid/created/binary_exp/op_bool/and_float_boolean.deca
// Description :
//    test and entre un float et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Type gauche float. Type droit boolean Type attendu: ‘boolean’

{
float a;
boolean b;
boolean c = a && b;
}
